# rasterizer

./: .gitignore  CMakeLists.txt  README.md
include/renderer/: buffers.hpp  camera.hpp  common.hpp  input_win.hpp  light.hpp  mesh.hpp  obj_loader.hpp  pipeline.hpp  raster.hpp  texture.hpp
src/: main.cpp  obj_loader.cpp  texture.cpp
